Add timeToLive for PricingServer